@@ -1,3 +1,8 @@
+2001-11-26  Don Porter <dgp@users.sourceforge.net>
+
+	* generic/tclIntPlatDecls.h: 'make genstubs' after changes
+	in 2001-11-23 commit from Daniel Steffen.
+
 2001-11-24  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/Makefile.in: Add comments to better describe
